@@ -5,3 +5,5 @@ Paradigms:
 * Discrete choice paradigm: saving information about the response buttons in the session.xml file
 * Num2Pos paradigm: renamed some fields in the session.xml file
 * Changed where we call stimuli.present() in the trial loop, so not to lose the first frame
+* Num2Pos: removed run_full_experiment()
+* Validating subject ID - allow only a subset of characters, which are accepted in file names and as matlab struct keys
